# psol-v1

./: .gitignore  AUDIT_PREP.md  Anchor.toml  Cargo.toml  DEPLOYED.md  DEPLOYMENT_GUIDE.md  GITHUB_IMPLEMENTATION.md  MIGRATION_GUIDE.md  README.md  SECURITY_AUDIT.md  client.ts  package-lock.json  package.json  test-full-stack.js  test-full-stack.ts
.backup-phase25/src/: events.rs  lib.rs
.backup-phase25/src/crypto/: curve_utils.rs  mod.rs  poseidon.rs  public_inputs.rs
.backup-phase25/src/instructions/: withdraw.rs
.backup-phase25/src/state/: mod.rs  pool_config.rs
.cargo/: config.toml
.devcontainer/: bootstrap.sh  devcontainer.json
.github/: copilot-instructions.md
circuits/: withdraw.circom  withdraw_keccak.circom
examples/: complete-flow.ts
phase4-new/: error.rs  events.rs  lib.rs
phase4-new/instructions/: deposit.rs  initialize_pool.rs  mod.rs  set_verification_key.rs  withdraw.rs
phase4-new/instructions/admin/: mod.rs  update_authority.rs
phase4-new/state/: pool_config.rs
programs/crypto/: Cargo.toml
programs/crypto/src/: error.rs  events.rs  lib.rs
programs/psol-privacy/: Cargo.toml
programs/psol-privacy/src/: error.rs  lib.rs  tests.rs
programs/psol-privacy/src/crypto/: groth16_verifier.rs  mod.rs  poseidon.rs  public_inputs.rs
programs/psol-privacy/src/instructions/: deposit.rs  initialize_pool.rs  mod.rs  private_transfer.rs  set_verification_key.rs  withdraw.rs
programs/psol-privacy/src/instructions/admin/: mod.rs  unpause.rs
programs/psol-privacy/src/state/: merkle_tree.rs  spent_nullifier.rs  verification_key.rs
psol-privacy/src/: lib.rs
psol-privacy/src/crypto/: curve_utils.rs  poseidon.rs  public_inputs.rs
psol-privacy/src/instructions/: private_transfer.rs  set_verification_key.rs  withdraw.rs
psol-privacy/src/state/: mod.rs
psol-sdk/: README.md  package-lock.json  package.json  tsconfig.json
psol-sdk/examples/: admin-operations.ts  deposit-withdraw.ts
psol-sdk/src/: index.ts
psol-sdk/src/@types/: circomlibjs.d.ts
psol-sdk/src/client/: index.ts  program.ts  psolClient.ts
psol-sdk/src/crypto/: index.ts  merkle.ts  merkleKeccak.ts  poseidon.ts  proof.ts
psol-sdk/src/idl/: psol_privacy.json
psol-sdk/src/types/: index.ts
psol-sdk/src/utils/: index.ts  note.ts  pda.ts
services/psol-relayer/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  test-relayer-key.js  tsconfig.json
services/psol-relayer/examples/: client.ts
tests/: psol-privacy.ts
(+28 files in other folders)
