[package]
name = "psol-privacy"
version = "0.2.0"
description = "pSol Privacy Pool - ZK-based private transactions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Future: enable when real crypto is ready
# production = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"

[dev-dependencies]
# For testing only
