[package]
name = "psol-privacy"
version = "0.3.0"
description = "pSol Privacy Pool - ZK-based private transactions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Dev mode: allows bypassing proof verification for testing
# NEVER enable in production builds!
dev-mode = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
# Poseidon hash function optimized for Solana
light-poseidon = "0.2.0"
# For big integer arithmetic in curve operations
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
# For property-based testing
proptest = "1.4"
rand = "0.8"
