[package]
name = "psol-privacy"
version = "1.0.0"
description = "pSol Privacy Pool - Phase 3 Production Implementation"
edition = "2021"
license = "MIT"
repository = "https://github.com/psolprotocol/psol-v1"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "1.4"
rand = "0.8"
